PRF-802: fixed the alignment and layout of icons in album card on my account page.

--- a/src/main/webapp/src/scss/main/minisite/foxtel-now/components/card.scss
+++ b/src/main/webapp/src/scss/main/minisite/foxtel-now/components/card.scss
@@ -15,14 +15,24 @@
 	@include foxtel-now-card();
 	width: inherit;
 	height: 204px;
-	margin-left: 15px;
 	margin-bottom: 27px;
 	text-align: center;
-	>img {
-	    width: 32px;
-	    height: auto;
-	    margin: 0 auto;
-	}
+
+	display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    cursor: pointer;
+	&__content {
+        >img {
+            width: 71px;
+            height: auto;
+        }
+        >p {
+            text-align: center;
+        }
+    }
 }
 
 .foxtel-now-card--basic {
